--- a/index.html
+++ b/index.html
@@ -2989,3 +2989,4 @@ if (window.location.hash != "#nostyle"){
 
 
 <div class="context-view" aria-hidden="true" style="display: none;"></div><div class="monaco-aria-container"><div class="monaco-alert" role="alert" aria-atomic="true"></div><div class="monaco-alert" role="alert" aria-atomic="true"></div><div class="monaco-status" aria-live="polite" aria-atomic="true"></div><div class="monaco-status" aria-live="polite" aria-atomic="true"></div></div><script src="./index_files/tooltips.js.download" type="text/javascript"></script></body></html>
+trigger GitHub Pages
