--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vasu's Guitar Site</title>
+  <title>Vasu Guitar Classes</title>
   <style>
     * {
       margin: 0; padding: 0; box-sizing: border-box;
@@ -164,7 +164,7 @@
 
   <header>
     <span class="guitar-emoji" aria-label="Guitar">🎸</span>
-    <h1>Vasu's Guitar Website</h1>
+    <h1>Vasu Guitar Classes</h1>
   </header>
 
   <main class="container">
@@ -212,7 +212,7 @@
   </main>
 
   <footer>
-    <p>Made with ❤️ by Vasu &nbsp;|&nbsp; Follow me on: 
+    <p>Made with ❤️ by Vasu Guitar Classes &nbsp;|&nbsp; Follow me on: 
       <a href="#" title="Twitter">🐦</a>
       <a href="#" title="Instagram">📸</a>
       <a href="#" title="YouTube">▶️</a>
