--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
   <main class="container">
     <section class="about" aria-labelledby="about-heading">
-      <h2 id="about-heading">About Me</h2>
+      <h2 id="about-heading">About Vasu Guitar Classes</h2>
       <p>
-        Hi! I’m Vasu, a passionate guitar player and music lover. This website is my personal space to share guitar tips, tutorials, and connect with fellow music enthusiasts. Whether you’re a beginner or a pro, welcome aboard!
+        Welcome to <strong>Vasu Guitar Classes</strong>! I'm Vasu, a passionate guitar player and music coach. I created this space to share tips, inspiration, and connect with anyone who loves guitar as much as I do. Whether you're a total beginner or already jamming, you're in the right place.
       </p>
     </section>
 
@@ -198,7 +198,7 @@
     </section>
 
     <section class="contact" aria-labelledby="contact-heading">
-      <h2 id="contact-heading">Contact Me</h2>
+      <h2 id="contact-heading">Contact Vasu Guitar Classes</h2>
       <div class="contact-info">
         <p><strong>Name:</strong> Vasu</p>
         <p><strong>Phone:</strong> <a href="tel:9211323137">9211323137</a></p>
@@ -212,7 +212,7 @@
   </main>
 
   <footer>
-    <p>Made with ❤️ by Vasu Guitar Classes &nbsp;|&nbsp; Follow me on: 
+    <p>Made with ❤️ by Vasu Guitar Classes &nbsp;|&nbsp; Follow us on: 
       <a href="#" title="Twitter">🐦</a>
       <a href="#" title="Instagram">📸</a>
       <a href="#" title="YouTube">▶️</a>
