--- a/index.html
+++ b/index.html
@@ -5,50 +5,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vasu Guitar Classes</title>
   <style>
-    /* CSS styling including music-themed background and your content styles */
-    /* … (full CSS you copied earlier) … */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+    }
+
+    main {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    h2 {
+      color: #222;
+    }
+
+    .contact-info {
+      background-color: #eee;
+      padding: 1rem;
+      border-radius: 5px;
+    }
+
+    .book-now {
+      text-align: center;
+      margin-top: 2rem;
+    }
+
+    .book-now a {
+      background-color: #28a745;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    .book-now a:hover {
+      background-color: #218838;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #ddd;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
+
   <header>
-    <span class="guitar-emoji" aria-label="Guitar">🎸</span>
     <h1>Vasu Guitar Classes</h1>
   </header>
-  <main class="container">
-    <section class="about">
-      <h2>About Vasu Guitar Classes</h2>
-      <p>Welcome to <strong>Vasu Guitar Classes</strong>! I'm Vasu, a passionate guitar player…</p>
+
+  <main>
+    <section>
+      <h2>About</h2>
+      <p>Welcome to Vasu Guitar Classes! I'm Vasu, a passionate guitarist offering beginner-friendly lessons to help you master your skills.</p>
     </section>
-    <section class="lessons">
-      <h2>Guitar Lessons &amp; Tips</h2>
-      <p>I love teaching guitar! Here are some tips…</p>
+
+    <section>
+      <h2>Lessons</h2>
+      <p>We offer acoustic and electric guitar lessons for all levels. Learn chords, rhythm, fingerstyle, and music theory — all in an easy and fun way.</p>
     </section>
-    <div class="book-now-container">
-      <a href="https://wa.me/919211323137" target="_blank" class="book-now-btn">📆 Book a Lesson Now</a>
-    </div>
-    <section class="gallery-section">
-      <h2>Guitar Gallery</h2>
-      <div class="gallery">
-        <img src="…acoustic.jpg" alt="Acoustic guitar" />
-        <img src="…electric.jpg" alt="Electric guitar" />
-        <img src="…strings.jpg" alt="Guitar strings close-up" />
-        <img src="…playing.jpg" alt="Playing guitar" />
-      </div>
+
+    <section class="book-now">
+      <a href="https://wa.me/919211323137" target="_blank">📅 Book a Lesson</a>
     </section>
-    <section class="contact">
-      <h2>Contact Vasu Guitar Classes</h2>
-      <div class="contact-info">
-        <p><strong>Name:</strong> Vasu</p>
-        <p><strong>Phone:</strong> <a href="tel:9211323137">9211323137</a></p>
-        <p><strong>Email:</strong> <a href="mailto:karun94046@gmail.com">karun94046@gmail.com</a></p>
-      </div>
+
+    <section class="contact-info">
+      <h2>Contact</h2>
+      <p><strong>Name:</strong> Vasu</p>
+      <p><strong>Phone:</strong> <a href="tel:9211323137">9211323137</a></p>
+      <p><strong>Email:</strong> <a href="mailto:karun94046@gmail.com">karun94046@gmail.com</a></p>
     </section>
-    <blockquote>
-      "Music is the universal language of mankind." – Henry Wadsworth Longfellow
-    </blockquote>
   </main>
+
   <footer>
-    <p>Made with ❤️ by Vasu Guitar Classes | Follow us on: 🐦📸▶️</p>
+    &copy; 2025 Vasu Guitar Classes. All rights reserved.
   </footer>
+
 </body>
 </html>
